<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/login_background_color"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:text="@string/Achievements"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/example_achievement1_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/example_achievement2_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/example_achievement3_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/example_achievement4_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/tmp_navmap_button"
        android:text="@string/view_your_achievements"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>