<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/account_settings_background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:text="@string/change_username"
        android:id="@+id/change_username_button"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:text="@string/change_password"
        android:id="@+id/change_password_button"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/logout_button"
        android:text="@string/log_out"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/share"
            android:id="@+id/share_button"
            android:layout_margin="0dp"
            android:padding="0dp"

            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>