<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/login_background_color"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/navigation_messages_button"
        android:text="@string/messages"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/navigation_invite_friends_button"
            android:text="@string/invite_friends"
            android:layout_margin="0dp"
            android:padding="0dp"

            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/navigation_account_settings_button"
            android:text="@string/account_settings"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>